docs/10.8/html/en/reference/spkg/_sources/meson.rst.txt
.. _spkg_meson:

meson: A high performance build system
======================================

Description
-----------

A high performance build system

License
-------

Apache License, Version 2.0

Upstream Contact
----------------

https://pypi.org/project/meson/



Type
----

standard


Dependencies
------------

- $(PYTHON)
- :ref:`spkg_pip`

Version Information
-------------------

package-version.txt::

    1.11.2

pyproject.toml::

    meson >=1.7
    meson-python

version_requirements.txt::

    meson >= 1.5.0

See https://repology.org/project/meson/versions

Installation commands
---------------------

.. tab:: PyPI:

   .. CODE-BLOCK:: bash

       $ pip install meson\>=1.7 meson-python

.. tab:: Sage distribution:

   .. CODE-BLOCK:: bash

       $ sage -i meson

.. tab:: Alpine:

   .. CODE-BLOCK:: bash

       $ apk add meson

.. tab:: Arch Linux:

   .. CODE-BLOCK:: bash

       $ sudo pacman -S meson

.. tab:: conda-forge:

   .. CODE-BLOCK:: bash

       $ conda install meson

.. tab:: Debian/Ubuntu:

   .. CODE-BLOCK:: bash

       $ sudo apt-get install meson

.. tab:: Fedora/Redhat/CentOS:

   .. CODE-BLOCK:: bash

       $ sudo dnf install meson

.. tab:: FreeBSD:

   .. CODE-BLOCK:: bash

       $ sudo pkg install devel/meson

.. tab:: Gentoo Linux:

   .. CODE-BLOCK:: bash

       $ sudo emerge dev-build/meson

.. tab:: Homebrew:

   .. CODE-BLOCK:: bash

       $ brew install meson

.. tab:: mingw-w64:

   .. CODE-BLOCK:: bash

       $ sudo pacman -S ${MINGW_PACKAGE_PREFIX}-meson

.. tab:: Nixpkgs:

   .. CODE-BLOCK:: bash

       $ nix-env -f \'\<nixpkgs\>\' --install --attr meson

.. tab:: openSUSE:

   .. CODE-BLOCK:: bash

       $ sudo zypper install meson

.. tab:: Slackware:

   .. CODE-BLOCK:: bash

       $ sudo slackpkg install meson


However, these system packages will not be used for building Sage
because ``spkg-configure.m4`` has not been written for this package;
see :issue:`27330` for more information.
